added dish route

--- a/src/components/DishCard/DishCard.scss
+++ b/src/components/DishCard/DishCard.scss
@@ -82,6 +82,7 @@
       color: #231f20;
       text-align: center;
       width: 100%;
+      text-decoration: none;
 
       @media screen and (max-width: 400px) {
         font-size: 18px;
