removed js file from public dir

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -53,7 +53,7 @@
 
 @keyframes slideDown {
   from {
-    transform: translateY(0);
+    transform: translateY(-100%);
   }
   to {
     transform: translateY(-60%);
