--- a/src/partials/Home/HomeNoveltyItem/HomeNoveltyItem.scss
+++ b/src/partials/Home/HomeNoveltyItem/HomeNoveltyItem.scss
@@ -39,12 +39,19 @@
 }
 
 .novelty-info {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   display: flex;
   flex-direction: column;
   margin-left: 10px;
+  text-align: left;
+
   & span:nth-child(2) {
     color: #f7d22d;
+  }
+
+  .novelty-link {
+    color: black;
+    text-decoration: none;
   }
 }
