--- a/src/components/DishCard/DishCard.scss
+++ b/src/components/DishCard/DishCard.scss
@@ -11,7 +11,7 @@
   transition: 0.35s;
 
   @media screen and (max-width: 1200px) {
-    height: 170px;
+    height: 200px;
     width: 350px;
     flex-direction: row;
     align-items: center;
@@ -20,7 +20,7 @@
 
   @media screen and (max-width: 400px) {
     flex-direction: column;
-    height: 220px;
+    height: 240px;
   }
 
   &:hover {
@@ -74,6 +74,7 @@
     flex-direction: column;
     flex-grow: 1;
     justify-content: space-between;
+    height: 100%;
 
     &__title {
       display: inline-block;
