--- a/src/components/Spinner/Spinner.scss
+++ b/src/components/Spinner/Spinner.scss
@@ -3,6 +3,14 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 3;
+  background-color: #fff;
 }
 
 .spinner {
@@ -12,6 +20,19 @@
   width: 2rem;
   height: 2rem;
   animation: spin 1s ease-in-out infinite;
+
+  &__logo {
+    height: 200px;
+    width: 200px;
+  }
+
+  &__info {
+    margin-top: 20px;
+    color: #f7d22d;
+    font-weight: bold;
+    font-size: 20px;
+    text-shadow: 5px 5px 5px #c7c7c7c7;
+  }
 }
 
 @keyframes spin {
