--- a/src/components/DishCard/DishCard.scss
+++ b/src/components/DishCard/DishCard.scss
@@ -123,6 +123,12 @@
   cursor: pointer;
   border-radius: 8px;
   transition: 0.35s;
+
+  &._inBasket {
+    background-color: #f3f3f7;
+    pointer-events: none;
+    color: #231f20;
+  }
 }
 
 .dishes-item__button:hover {
