implements simple adding to basket

--- a/src/components/Header/BasketButton/BasketButton.scss
+++ b/src/components/Header/BasketButton/BasketButton.scss
@@ -27,7 +27,7 @@
   &-amount {
     display: flex;
     justify-content: space-between;
-    padding: 15px 0;
+    padding: 15px 10px 15px 0;
 
     & span:nth-child(1) {
       font-weight: bold;
