--- a/src/components/Header/BasketButton/BasketButton.scss
+++ b/src/components/Header/BasketButton/BasketButton.scss
@@ -12,7 +12,8 @@
     justify-content: space-around;
     cursor: pointer;
     transition: 0.3s;
-    position: relative;
+    color: #000;
+    text-decoration: none;
 
     .header-bot-basket__button:hover {
       background-color: #ffdc40;
