--- a/src/partials/Basket/BasketSauce/BasketSauce.scss
+++ b/src/partials/Basket/BasketSauce/BasketSauce.scss
@@ -7,6 +7,11 @@
   width: 115px;
   border: 2px solid #e2e2e9;
   border-radius: 12px;
+  cursor: pointer;
+
+  &._inBasket {
+    border-color: #fbff00;
+  }
 
   @media screen and (max-width: 900px) {
     margin: 5px auto 10px auto;
