--- a/src/partials/Ordering/OrderingComposition/OrderingComposition.scss
+++ b/src/partials/Ordering/OrderingComposition/OrderingComposition.scss
@@ -21,6 +21,19 @@
     list-style: none;
     color: rgba(35, 31, 32, 0.8);
     font-weight: 600;
+    max-height: 250px;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 8px;
+      background-color: #f1f1f1;
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #aaa;
+      border-radius: 10px;
+    }
   }
 
   &-total {
