--- a/src/components/Header/BasketButtonDropdownItem/BasketButtonDropdownItem.scss
+++ b/src/components/Header/BasketButtonDropdownItem/BasketButtonDropdownItem.scss
@@ -14,6 +14,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
   }
 
   &-counter {
