--- a/src/components/Header/MobMenu/MobMenu.scss
+++ b/src/components/Header/MobMenu/MobMenu.scss
@@ -1,10 +1,11 @@
 .header-mob-menu {
   position: absolute;
   width: 100%;
+  height: 100%;
   background-color: #f7d22d;
   z-index: 1;
   top: 0;
-  transform: translateY(-420px);
+  transform: translateY(-100%);
   transition: 0.35s;
 
   &.visible {
@@ -26,41 +27,4 @@
   }
 }
 
-.mob-basket {
-  &-btn-inner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
 
-  &__number {
-    display: inline-block;
-    color: #000;
-    font-size: 20px;
-    font-weight: bold;
-    margin: 5px 0;
-  }
-
-  &__count {
-    border-left: 2px solid black;
-    padding-left: 10px;
-  }
-
-  &__btn {
-    height: 40px;
-    width: 160px;
-    background-color: #ffffff;
-    border: none;
-    border-radius: 8px;
-    outline: none;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    cursor: pointer;
-    transition: 0.3s;
-    position: relative;
-    margin: 10px 0;
-  }
-}
