--- a/src/partials/Category/CategoryList/CategoryList.scss
+++ b/src/partials/Category/CategoryList/CategoryList.scss
@@ -11,9 +11,8 @@
   }
 
   &-list {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     padding: 0;
 
     @media screen and (max-width: 1200px) {
@@ -22,7 +21,7 @@
       grid-template-rows: 1fr 1fr;
     }
     @media screen and (max-width: 800px) {
-      display: flex;
+      grid-template-columns: 1fr;
     }
   }
 }
