--- a/src/partials/Home/HomeNoveltyItem/HomeNoveltyItem.scss
+++ b/src/partials/Home/HomeNoveltyItem/HomeNoveltyItem.scss
@@ -13,6 +13,7 @@
     flex-direction: column;
     text-align: center;
     justify-content: space-between;
+    text-align: center;
   }
 
   @media screen and (max-width: 800px) {
@@ -45,6 +46,11 @@
   flex-direction: column;
   margin-left: 10px;
   text-align: left;
+
+  @media screen and (max-width: 1200px) {
+    align-items: center;
+    text-align: center;
+  }
 
   & span:nth-child(2) {
     color: #f7d22d;
