--- a/src/pages/Confirmed/Confirmed.scss
+++ b/src/pages/Confirmed/Confirmed.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px 0;
+  margin-bottom: 100px;
 
   &-title {
     font-size: 24px;
