--- a/src/components/Header/MobMenu/MobMenu.scss
+++ b/src/components/Header/MobMenu/MobMenu.scss
@@ -1,7 +1,7 @@
 .header-mob-menu {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #f7d22d;
   z-index: 1;
   top: 0;
