added styles for basket

--- a/src/partials/Basket/BasketCustom/BasketCustom.scss
+++ b/src/partials/Basket/BasketCustom/BasketCustom.scss
@@ -43,6 +43,7 @@
   &-right {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 
     @media screen and (max-width: 800px) {
       justify-content: center;
