--- a/src/partials/Basket/BasketMessage/BasketMessage.scss
+++ b/src/partials/Basket/BasketMessage/BasketMessage.scss
@@ -26,5 +26,6 @@
     color: #fff;
     text-decoration: none;
     border-radius: 8px;
+    box-shadow: 4px 4px 10px rgba(184, 184, 184, 1);
   }
 }
