--- a/src/components/Header/BasketButtonDropdown/BasketButtonDropdown.scss
+++ b/src/components/Header/BasketButtonDropdown/BasketButtonDropdown.scss
@@ -39,7 +39,7 @@
   &-list {
     list-style: none;
     padding: 0 10px 0 0;
-    margin: 0;
+    margin: 10px 0 0 0 ;
     max-height: 320px;
     overflow-y: auto;
     position: relative;
