--- a/src/components/Header/BasketButtonDropdownItem/BasketButtonDropdownItem.scss
+++ b/src/components/Header/BasketButtonDropdownItem/BasketButtonDropdownItem.scss
@@ -42,7 +42,7 @@
   &-right {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
   }
 
   &__remove {
