--- a/src/partials/Basket/BasketCustom/BasketCustom.scss
+++ b/src/partials/Basket/BasketCustom/BasketCustom.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 300px;
   border-top: 2px solid #5f5f5f5a;
-  padding: 20px 0;
+  padding: 20px 10px 20px 0;
 
   @media screen and (max-width: 800px) {
     grid-template-columns: 1fr;
