--- a/src/partials/Ordering/OrderingDeliveryCheckbox/OrderingDeliveryCheckbox.scss
+++ b/src/partials/Ordering/OrderingDeliveryCheckbox/OrderingDeliveryCheckbox.scss
@@ -3,6 +3,7 @@
   max-width: 200px;
   justify-content: space-between;
   align-items: center;
+  margin-top: 10px;
 
   @media screen and (max-width: 600px) {
     max-width: 120px;
