added responsive for dish card

--- a/src/partials/Dish/DishDetailsCard/DishDetailsCard.scss
+++ b/src/partials/Dish/DishDetailsCard/DishDetailsCard.scss
@@ -30,6 +30,11 @@
     height: 530px;
   }
 
+  @media screen and (max-width: 350px) {
+    max-height: 530px;
+    padding: 15px;
+  }
+
   &-total {
     display: flex;
     justify-content: space-between;
