--- a/src/components/DishCard/DishCard.scss
+++ b/src/components/DishCard/DishCard.scss
@@ -20,7 +20,8 @@
 
   @media screen and (max-width: 400px) {
     flex-direction: column;
-    height: 240px;
+    min-height: 240px;
+    max-width: 260px;
   }
 
   &:hover {
@@ -63,10 +64,10 @@
       height: 120px;
     }
 
-    @media screen and (max-width: 400px) {
-      height: 80px;
-      width: 80px;
-    }
+    // @media screen and (max-width: 400px) {
+    //   height: 80px;
+    //   width: 80px;
+    // }
   }
 
   &-body {
