--- a/src/components/DishCard/DishCard.scss
+++ b/src/components/DishCard/DishCard.scss
@@ -20,7 +20,7 @@
 
   @media screen and (max-width: 400px) {
     flex-direction: column;
-    min-height: 240px;
+    min-height: 300px;
     max-width: 260px;
   }
 
@@ -63,11 +63,6 @@
       width: 120px;
       height: 120px;
     }
-
-    // @media screen and (max-width: 400px) {
-    //   height: 80px;
-    //   width: 80px;
-    // }
   }
 
   &-body {
@@ -76,6 +71,7 @@
     flex-grow: 1;
     justify-content: space-between;
     height: 100%;
+    width: 100%;
 
     &__title {
       display: inline-block;
