--- a/src/partials/Dish/DishDetailsCard/DishDetailsCard.scss
+++ b/src/partials/Dish/DishDetailsCard/DishDetailsCard.scss
@@ -27,11 +27,10 @@
   }
 
   @media screen and (max-width: 400px) {
-    height: 530px;
+    height: 600px;
   }
 
   @media screen and (max-width: 350px) {
-    max-height: 530px;
     padding: 15px;
   }
 
@@ -76,6 +75,9 @@
       display: flex;
       justify-content: center;
       margin: 30px 0;
+      @media screen and (max-width: 400px) {
+        margin: 0;
+      }
     }
 
     &__button {
@@ -137,6 +139,14 @@
     font-weight: bold;
     font-size: 36px;
     margin-top: 10px;
+
+    @media screen and (max-width: 600px) {
+      font-size: 30px;
+      text-align: center;
+    }
+    @media screen and (max-width: 400px) {
+      font-size: 24px;
+    }
   }
 
   &__ingredients {
@@ -156,6 +166,14 @@
     align-items: center;
     font-size: 18px;
     color: #696f7a;
+
+    @media screen and (max-width: 600px) {
+      width: 320px;
+    }
+
+    @media screen and (max-width: 400px) {
+      width: 260px;
+    }
   }
 
   &-counter__button {
